@@ -11,6 +11,7 @@ Contents:
    :maxdepth: 2
 
    images
+   subdir/images
    includes
    markup
    desc
